--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ extAdsense: false
 # 数学公式支持，比较影响加载速度,不需要请设置为false
 extMath: false
 
-#Service worker
-extServiceWorker： false
+# Service Worker
+extServiceWorker: false
 
 # 友情链接
 links:
