--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ domainUrl: 'https://ragstone.world'
 baseurl: ''
 
 # 吐个槽地址，会在chat页面中重定向到该地址
-tucaoUrl: https://support.qq.com/product/86335
+tucaoUrl: https://support.qq.com/products/289030
 
 # 菜单
 menu:
