--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,8 @@ menu:
     url: /pages/categories.html
   - title: 搜索
     url: /pages/search.html
+  - title: 假面骑士
+    url: /pages/kamenrider.html
   - title: 关于
     url: /pages/about.html
 
